Open modules and fix user config defaulting